fix: further reduce pagination top spacing
Ultraworked with [Sisyphus](https://github.com/code-yeongyu/oh-my-openagent)

--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -1414,8 +1414,8 @@ h3.home-aside-title {
 .home-pager {
   display: flex;
   justify-content: space-between;
-  margin: 24px 0 24px;
-  padding-top: 12px;
+  margin: 16px 0 24px;
+  padding-top: 8px;
 }
 
 .home-pager a {
